<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fragment_background">

    <TextView
        android:id="@+id/text_view_reward_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:textSize="70sp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/yugioh_font"/>

    <TextView
        android:textSize="30sp"
        android:id="@+id/text_view_reward_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cache_reached"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_reward_title"
        android:fontFamily="@font/yugioh_font"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/text_view_reward_description">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_reward_your_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yugioh_font"
                android:text="@string/your_card"
                android:textSize="25sp"
                android:layout_gravity="center"/>

            <include
                android:id="@+id/placeholder_collectable_your"
                layout="@layout/item_collectable_yugioh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_reward_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yugioh_font"
                android:text="@string/pick_a_card"
                android:textSize="17sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="270"
            android:scaleX="1"
            android:src="@drawable/ic_baseline_import_export_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_reward_cached_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/yugioh_font"
                android:layout_gravity="center"
                android:text="@string/cached_card"
                android:textSize="25sp" />

            <include
                android:id="@+id/placeholder_collectable_cached"
                layout="@layout/item_collectable_yugioh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/text_view_reward_rarity_bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/yugioh_font"
        android:text="@string/rarity_bonus_100_points"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_reward_rarity_bonus">

        <Button
            android:id="@+id/btn_reward_accept"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yugioh_font"
            android:text="@string/accept"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_reward_refuse"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/yugioh_font"
            android:text="@string/refuse"
            android:textSize="30sp" />
    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>